2004-05-08  Jan Nieuwenhuizen  <janneke@gnu.org>

	* input/regression/newaddlyrics.ly: Fix.

	* Documentation/user/tutorial.itely: Use \newlyrics, remove most
	\score \notes.

2004-05-08  Heikki Junes <hjunes@cc.hut.fi>

        * Documentation/user/music-glossary.tely ([k-z]): last fixes.

2004-05-08  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* lily/paper-line.cc (Paper_line): don't store list of stencils,
	but convert to single Stencil immediately.

	* lily/paper-book.cc (title): don't return Stencil* but Stencil.

2004-05-07  Jan Nieuwenhuizen  <janneke@gnu.org>

	* scm/output-sodipodi.scm: Resurrect sodipodi output.

2004-05-07  Kristof Bastiaensen  <kristof.bastiaensen@vleeuwen.org>

	* elisp/lilypond-mode.el: Changed the way defaults are created for
	LilyPond-command-master.  LilyPond-mode will now check the
	timestamps of the files to see which command has to run next.

2004-05-07  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* scm/bass-figure.scm (format-bass-figure): don't set
	number-markup for strings. This fixes string in bass
	figure. (backportme)

	* lily/parser.yy (bass_number): insert number-markup into figure
	definition.

	* scm/define-music-properties.scm (all-music-properties): make
	'figure a markup.

	* scripts/convert-ly.py (conv): \apply -> \applymusic

2004-05-06  Kristof Bastiaensen  <kristof.bastiaensen@vleeuwen.org>

	* elisp/lilypond-mode.el: changed the order of some commands
	("Midi" after "2Midi"), use the user-defined
	LilyPond-command-default as default instead of "LilyPond"

	* elisp/lilypond-mode.el: added a LilyPond-master-file variable,
	to set the master file for the next command.

	* elisp/lilypond-font-lock.el: replaced font-lock-warning-face
	with font-lock-reference-face.

2004-05-07  Heikki Junes <hjunes@cc.hut.fi>

        * Documentation/user/music-glossary.tely ([ab]*): small fixes.

        * Documentation/user/music-glossary.tely ([c-l]*): more fixes.

2004-05-06  Han-Wen Nienhuys   <hanwen@xs4all.nl>
