@@ -1,4 +1,3 @@
-#(ly:set-option 'old-relative)
 \version "2.2.0"
 \include  "mozart-hrn3-defs.ly"
 
