@@ -304,10 +304,10 @@ PREAMBLE_LY = r'''%%%% Generated by %(program_name)s
 }
 ''' 
 
-FRAGMENT_LY = r'''\score{
-    \notes%(notes_string)s{
+FRAGMENT_LY = r'''
+    %(notes_string)s{
         %(code)s    }
-}'''
+'''
 FULL_LY = '%(code)s'
 
 texinfo_linewidths = {
