@@ -1,3 +1,7 @@
+2004-05-08  Han-Wen Nienhuys   <hanwen@xs4all.nl>
+
+	* scripts/lilypond-book.py (compose_ly): remove FRAGMENT_LY.
+
 2004-05-08  Jan Nieuwenhuizen  <janneke@gnu.org>
 
 	* input/regression/newaddlyrics.ly: Fix.
@@ -10,6 +14,8 @@
         * Documentation/user/music-glossary.tely ([k-z]): last fixes.
 
 2004-05-08  Han-Wen Nienhuys   <hanwen@xs4all.nl>
+
+	* input/mutopia/R.Schumann/romanze-op28-2.ly (d): use #(define .. )
 
 	* lily/paper-line.cc (Paper_line): don't store list of stencils,
 	but convert to single Stencil immediately.
